Added demo authentication endpoints and demo protected endpoints

--- a/auth_service/packaging/environment/env.dev.example
+++ b/auth_service/packaging/environment/env.dev.example
@@ -15,3 +15,7 @@ DB_PASSWORD=auth-service
 POSTGRES_DB=auth-service-db
 POSTGRES_USER=auth-service
 POSTGRES_PASSWORD=auth-service
+###############################################################################
+#############################Application settings##############################
+###############################################################################
+AUTH_SERVICE_DOMAIN=localhost:8888
