--- a/auth_service/packaging/environment/env.prod.example
+++ b/auth_service/packaging/environment/env.prod.example
@@ -15,3 +15,7 @@ DB_PASSWORD=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+###############################################################################
+#############################Application settings##############################
+###############################################################################
+AUTH_SERVICE_DOMAIN=test.com
