--- a/auth_service/packaging/conf/nginx/nginx.conf
+++ b/auth_service/packaging/conf/nginx/nginx.conf
@@ -40,7 +40,7 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name wu-labs.com;
+        server_name wu-labs-auth.acpsoftwaresolutions.com;
 
         location ^~ /.well-known/acme-challenge/ {
         	allow all;
@@ -56,7 +56,7 @@ http {
     server {
         listen 443 ssl http2 default_server;
         listen [::]:443 ssl http2 default_server;
-        server_name wu-labs.com;
+        server_name wu-labs-auth.acpsoftwaresolutions.com;
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
 
