--- a/auth_service/docker-compose-prod.yml
+++ b/auth_service/docker-compose-prod.yml
@@ -13,8 +13,7 @@ services:
     env_file:
       - .env
     depends_on:
-      postgres_db:
-        condition: service_healthy
+      - postgres_db
     restart: on-failure
 
   postgres_db:
