--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+Authlib==0.15.2
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -16,6 +17,7 @@ pep517==0.8.2
 progress==1.5
 psycopg2-binary==2.8.6
 pyparsing==2.4.6
+python-jose==3.2.0
 pytoml==0.1.21
 requests==2.22.0
 retrying==1.3.3
