Added database models and CRUD views for them

--- a/auth_service/docker-compose-dev.yml
+++ b/auth_service/docker-compose-dev.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.7'
 
 services:
   web:
@@ -15,8 +15,7 @@ services:
     ports:
       - 8888:8888
     depends_on:
-      postgres_db:
-        condition: service_healthy
+      - postgres_db
     restart: on-failure
 
   postgres_db:
