--- a/auth_service/docker-compose-prod.yml
+++ b/auth_service/docker-compose-prod.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.7'
 
 services:
   web:
@@ -13,7 +13,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
     restart: on-failure
 
   postgres_db:
