--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -1,5 +1,4 @@
 appdirs==1.4.3
-Authlib==0.15.2
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -11,13 +10,13 @@ html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
+MarkupSafe==1.1.1
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
 psycopg2-binary==2.8.6
 pyparsing==2.4.6
-python-jose==3.2.0
 pytoml==0.1.21
 requests==2.22.0
 retrying==1.3.3
@@ -26,3 +25,4 @@ SQLAlchemy==1.3.22
 tornado==6.1
 urllib3==1.25.8
 webencodings==0.5.1
+WTForms==2.3.3
