Updated auth service endpoints to use database, refactored code

--- a/auth_service/packaging/conf/nginx/self-signed.conf
+++ b/auth_service/packaging/conf/nginx/self-signed.conf
@@ -1,2 +1,2 @@
-ssl_certificate /etc/letsencrypt/live/wu-labs-auth.acpsoftwaresolutions.com/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/wu-labs-auth.acpsoftwaresolutions.com/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/wu-labs.com/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/wu-labs.com/privkey.pem;
