--- a/auth_service/packaging/environment/env.prod.example
+++ b/auth_service/packaging/environment/env.prod.example
@@ -19,3 +19,6 @@ POSTGRES_PASSWORD=
 #############################Application settings##############################
 ###############################################################################
 AUTH_SERVICE_DOMAIN=test.com
+
+PRIVATE_KEY=
+PUBLIC_KEY=
