Added styling to match Wu Labs main site, added to the client view

--- a/auth_service/packaging/conf/nginx/nginx.conf
+++ b/auth_service/packaging/conf/nginx/nginx.conf
@@ -42,6 +42,21 @@ http {
         listen [::]:80 default_server;
         server_name wu-labs.com;
 
+        location ^~ /static/ {
+            root /AuthService;
+            if ($query_string) {
+                expires max;
+            }
+        }
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            rewrite (.*) /static/favicon.ico;
+        }
+        location = /robots.txt {
+            rewrite (.*) /static/robots.txt;
+        }
+
         location ^~ /.well-known/acme-challenge/ {
         	allow all;
             default_type "text/plain";
@@ -60,7 +75,20 @@ http {
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
 
-        location /favicon.ico { access_log off; log_not_found off; }
+        location ^~ /static/ {
+            root /AuthService;
+            if ($query_string) {
+                expires max;
+            }
+        }
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            rewrite (.*) /static/favicon.ico;
+        }
+        location = /robots.txt {
+            rewrite (.*) /static/robots.txt;
+        }
 
         location / {
             proxy_pass_header  Server;
