--- a/auth_service/packaging/environment/env.prod.example
+++ b/auth_service/packaging/environment/env.prod.example
@@ -2,6 +2,8 @@
 ################################Tornado settings###############################
 ###############################################################################
 DEBUG=0
+COOKIE_SECRET=
+COOKIE_EXPIRES_AFTER=15
 
 DB_ENGINE=postgresql
 DB_HOST=postgres_db
@@ -16,6 +18,14 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 ###############################################################################
+##############################Memcached settings###############################
+###############################################################################
+MEMCACHED_HOSTNAME=memcached
+MEMCACHED_PORT_NUMBER=11211
+MEMCACHED_CACHE_SIZE=64
+MEMCACHED_USERNAME=
+MEMCACHED_PASSWORD=
+###############################################################################
 #############################Application settings##############################
 ###############################################################################
 AUTH_SERVICE_DOMAIN=test.com
@@ -23,3 +33,14 @@ AUTH_SERVICE_DOMAIN=test.com
 PRIVATE_KEY=
 PUBLIC_KEY=
 JWT_EXP_IN_MINUTES=
+###############################################################################
+###############################OAuthlib Settings#################################
+###############################################################################
+OAUTHLIB_INSECURE_TRANSPORT=0
+###############################################################################
+###############################GITHUB Settings#################################
+###############################################################################
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+AUTH_BASE_URL=https://github.com/login/oauth/authorize
+TOKEN_URL=https://github.com/login/oauth/access_token
