--- a/auth_service/docker-compose-prod.yml
+++ b/auth_service/docker-compose-prod.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       postgres_db:
         condition: service_healthy
+      memcached:
+        condition: service_started
     restart: on-failure
 
   postgres_db:
@@ -29,6 +31,11 @@ services:
       interval: 1s
       retries: 20
 
+  memcached:
+    image: bitnami/memcached:1.6.9
+    env_file:
+      - .env
+
   nginx:
     image: nginx:latest
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
@@ -38,6 +45,7 @@ services:
       - ./packaging/conf/nginx/ssl-params.conf:/etc/nginx/snippets/ssl-params.conf
       - ./packaging/data/certbot/conf:/etc/letsencrypt
       - ./packaging/data/certbot/www:/var/www/certbot
+      - ./src/AuthService:/AuthService
     ports:
       - 80:80
       - 443:443
