Added support for ORCID auth

--- a/auth_service/packaging/environment/env.prod.example
+++ b/auth_service/packaging/environment/env.prod.example
@@ -29,10 +29,10 @@ MEMCACHED_PASSWORD=
 #############################Application settings##############################
 ###############################################################################
 AUTH_SERVICE_DOMAIN=test.com
-
-PRIVATE_KEY=
-PUBLIC_KEY=
 JWT_EXP_IN_MINUTES=
+
+PUBLIC_KEY=
+PRIVATE_KEY=
 ###############################################################################
 ###############################OAuthlib Settings#################################
 ###############################################################################
@@ -42,5 +42,12 @@ OAUTHLIB_INSECURE_TRANSPORT=0
 ###############################################################################
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-AUTH_BASE_URL=https://github.com/login/oauth/authorize
-TOKEN_URL=https://github.com/login/oauth/access_token
+GITHUB_AUTH_BASE_URL=https://github.com/login/oauth/authorize
+GITHUB_TOKEN_URL=https://github.com/login/oauth/access_token
+###############################################################################
+################################ORCID Settings#################################
+###############################################################################
+ORCID_CLIENT_ID=
+ORCID_CLIENT_SECRET=
+ORCID_AUTH_BASE_URL=https://orcid.org/oauth/authorize
+ORCID_TOKEN_URL=https://orcid.org/oauth/token
